--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 <div id= "starter">
 <form name="quiz" method="post" name="buttons" id="quiz" onsubmit="return false">
 
-<li><div class="question">1. How many states make up the United States?</div></li>
-<input id="answer" type="radio" name="group1" value="wrong"> 100<br>
-<input id="answer" type="radio" name="group1" value="wrong"> 52<br>
-<input id="answer" type="radio" name="group1" value="wrong"> 49<br>
-<input id="answer" type="radio" name="group1" value="correct"> 50<hr>
+<li><div class="question">1. What what fandom do we normally play in?</div></li>
+<input id="answer" type="radio" name="group1" value="wrong"> My Little Pony<br>
+<input id="answer" type="radio" name="group1" value="wrong"> Archie Comics<br>
+<input id="answer" type="radio" name="group1" value="wrong"> DC<br>
+<input id="answer" type="radio" name="group1" value="correct"> X-Men<hr>
 
-<li><div class="question">2. Who was the skeptic on X-Files?</div></li>
-<input id="answer" type="radio" name="group2" value="wrong">No one<br>
-<input id="answer" type="radio" name="group2" value="correct">Scully<br>
-<input id="answer" type="radio" name="group2" value="wrong">Mulder<br>
-<input id="answer" type="radio" name="group2" value="wrong"> Michael Scott<hr>
+<li><div class="question">2. What is Caim's favorite sport?</div></li>
+<input id="answer" type="radio" name="group2" value="wrong">Football<br>
+<input id="answer" type="radio" name="group2" value="correct">Track<br>
+<input id="answer" type="radio" name="group2" value="wrong">Soccer<br>
+<input id="answer" type="radio" name="group2" value="wrong"> Curling<hr>
 
-<li><div class="question">3. What color is Mia's hair?"</div></li>
+<li><div class="question">3. What color is Mia's hair?</div></li>
 <input id="answer" type="radio" name="group3" value="wrong">Rainbow<br>
 <input id="answer" type="radio" name="group3" value="wrong"> Red<br>
 <input id="answer" type="radio" name="group3" value="wrong"> Brown<br>
@@ -61,15 +61,15 @@
 
 <li><div class="question">6. How many years have Claire and Sarah known each other?</div></li>
 <input id="answer" type="radio" name="group6" value="wrong">4<br>
-<input id="answer" type="radio" name="group6" value="wrong"> 5<br>
+<input id="answer" type="radio" name="group6" value="correct"> 7<br>
 <input id="answer" type="radio" name="group6" value="wrong"> 10<br>
-<input id="answer" type="radio" name="group6" value="correct" >7<hr>
+<input id="answer" type="radio" name="group6" value="wrong" >5<hr>
 
-<li><div class="question">7. Is coding hard?</div></li>
-<input id="answer" type="radio" name="group7" value="wrong"> yes<br>
-<input id="answer" type="radio" name="group7" value="wrong"> no<br>
-<input id="answer" type="radio" name="group7" value="correct"> not hard, challenging<br>
-<input id="answer" type="radio" name="group7" value="wrong"> you should take a bootcamp!<hr>
+<li><div class="question">7. How would I describe our friendship?</div></li>
+<input id="answer" type="radio" name="group7" value="wrong"> Incredible<br>
+<input id="answer" type="radio" name="group7" value="wrong"> Amazing<br>
+<input id="answer" type="radio" name="group7" value="wrong"> Awesome<br>
+<input id="answer" type="radio" name="group7" value="correct"> All of the above!!!<hr>
 
 </form>
 
